Finished Header Responsiveness

--- a/index.html
+++ b/index.html
@@ -84,18 +84,28 @@
 
     <!-- Header -->
 
-    <header id="header" class="image-wrapper container-fluid ">
+    <header id="header" class="image-wrapper container-fluid">
       <div id="hero" class="row justify-content-center">
-        
         <img
           src="assets/images/hero-image.webp"
           alt="dogs paw next to mans hand"
-          class="col-xl-7 p-0"
+          class="col-xl-7 p-0 mt-3"
         />
-        <h2 class="display-6 text-center bg-color-primary p-4 col-xl-4 my-auto mx-2">
-          Helping dogs find their forever families
-        </h2>
-        
+        <div class="col-xl-4 container">
+          <div id="spacer-top" class="row">
+            <h2 class="display-6 text-center bg-color-primary p-4 mt-3 col-12">
+              Helping dogs find their forever families
+            </h2>
+          </div>
+          <div class="row"></div>
+          <p class="text-center col-12 mt-2">
+            Established in 2001, our shelter began as a small, heartfelt effort
+            by Barry and Sheila—two lifelong dog lovers—who believed every dog
+            deserves a safe, loving home. What started as a passion project has
+            since grown into a trusted local hub for rescue, rehabilitation, and
+            adoption.
+          </p>
+        </div>
       </div>
     </header>
     <!-- Bootstrap JS -->
