--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- Header -->
 
-    <header id="header" class="image-wrapper container-fluid">
+    <header id="header" class="image-wrapper container">
       <div id="hero" class="row justify-content-center">
         <img
           src="assets/images/hero-image.webp"
