Add About Us Section and Start Footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     >
       <div class="container">
         <a class="navbar-brand" href="#"
-          ><h1 class="display-6">A Tail of Two Hearts</h1></a
+          ><h1 class="display-4">A Tail of Two Hearts</h1></a
         >
         <button
           class="navbar-toggler"
@@ -94,11 +94,11 @@
         <div class="col-xl-4 container">
           <div id="spacer-top" class="row">
             <h2 class="display-6 text-center bg-color-primary p-4 mt-3 col-12">
-              Helping dogs find their forever families
+              Helping Dogs find their Forever Families
             </h2>
           </div>
           <div class="row"></div>
-          <p class="text-center col-12 mt-2">
+          <p class="text-center col-12 mt-2 lead">
             Established in 2001, our shelter began as a small, heartfelt effort
             by Barry and Sheila—two lifelong dog lovers—who believed every dog
             deserves a safe, loving home. What started as a passion project has
@@ -108,6 +108,79 @@
         </div>
       </div>
     </header>
+    <hr class="m-2 p-1" />
+    <!-- About Us Section -->
+
+    <div id="about-us" class="container justify-content-center">
+      <div class="row">
+        <h3
+          class="bg-color-secondary display-6 text-center m-auto col-6 col-xl-3 p-4"
+        >
+          Who We Are
+        </h3>
+
+        <p class="m-auto col-xl-4 py-3">
+          Founded in 2001 by Barry and Sheila, our dog adoption shelter began as
+          a simple mission: to give every dog the second chance they deserve.
+          What started as a small rescue effort has grown into a trusted,
+          community-focused shelter where dogs find safety, love, and forever
+          homes. With compassion at our core, we’ve connected countless dogs
+          with families ready to welcome them.
+        </p>
+        <p class="m-auto col-xl-4 py-3">
+          We're more than a shelter—we’re a place where meaningful bonds are
+          formed between people and pets. As we grow, we’re committed to
+          expanding our impact through education, outreach, and deeper community
+          partnerships. Whether you're here to adopt, volunteer, or support in
+          another way, we’re glad you’re part of the journey.
+        </p>
+      </div>
+    </div>
+    <hr class="m-2 p-1" />
+
+    <!-- Footer -->
+    <footer class="container justify-content-center">
+      <div class="row justify-content-center">
+        <h3 class="col-7 text-center bg-color-primary p-4">Come and Say Hi!</h3>
+      </div>
+      <div class="row justify-content-center">
+        <p class="col-8 text-center p-4">
+          We’d love for you to come by, have a look around, and see it all for
+          yourself. Don’t be shy — stop in and say hi!
+        </p>
+      </div>
+      <div id="maps">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6528.009491748167!2d-1.5467365000330668!3d52.10891367708431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48772cbdd4f7f721%3A0x36ee47e81bd2c51d!2sOxhill%2C%20Warwick!5e1!3m2!1sen!2suk!4v1750707357195!5m2!1sen!2suk"
+          width="100%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <p class="p-4">2 Whatcote Rd<br>
+          Oxhill,<br>   
+          England</p>
+      <!-- Social Links -->
+      <div id="social-links">
+        <div class="social-links row justify-content-spaced pb-5">
+          <a class="col-3 text-center display-6" href="https://facebook.com/" target="_blank" rel="noopener"
+            ><i class="fab fa-facebook fa-lg"></i
+          ></a>
+          <a class="col-3 text-center display-6" href="https://instagram.com/" target="_blank" rel="noopener"
+            ><i class="fab fa-instagram fa-lg"></i
+          ></a>
+          <a class="col-3 text-center display-6" href="https://x.com/" target="_blank" rel="noopener"
+            ><i class="fab fa-twitter fa-lg"></i
+          ></a>
+          <a class="col-3 text-center display-6" href="https://linkedin.com/" target="_blank" rel="noopener"
+            ><i class="fab fa-linkedin fa-lg"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
