Add Boiler Plate with Links to HTML Pages

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- Google Fonts -->
+    <!-- Title and meta description -->
+    <title>A Tale of Two Hearts | Home</title>
+    <meta
+      name="description"
+      content="A Tail of Two Hearts is the dog adoption most trusted favourite to give you your happily ever after forever best friend"
+      >
+    <!-- Google Fonts -->  
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -94,7 +99,7 @@
         <div class="col-xl-4 container">
           <div id="spacer-top" class="row">
             <h2 class="display-6 text-center bg-color-primary p-4 mt-3 col-12">
-              Helping Dogs find their Forever Families
+              Helping Dogs find their Forever Families...
             </h2>
           </div>
           <div class="row"></div>
@@ -141,7 +146,9 @@
     <!-- Footer -->
     <footer class="container justify-content-center">
       <div class="row justify-content-center">
-        <h3 class="col-7 text-center bg-color-primary p-4">Come and Say Hi!</h3>
+        <h4 class="col-4 text-center display-6 bg-color-secondary mt-3 p-4">
+          Come and Say Hi!
+        </h4>
       </div>
       <div class="row justify-content-center">
         <p class="col-8 text-center p-4">
@@ -160,22 +167,40 @@
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div>
-      <p class="p-4">2 Whatcote Rd<br>
-          Oxhill,<br>   
-          England</p>
+      <p class="p-4">
+        2 Whatcote Rd<br />
+        Oxhill,<br />
+        England
+      </p>
       <!-- Social Links -->
       <div id="social-links">
         <div class="social-links row justify-content-spaced pb-5">
-          <a class="col-3 text-center display-6" href="https://facebook.com/" target="_blank" rel="noopener"
+          <a
+            class="col-3 text-center display-6"
+            href="https://facebook.com/"
+            target="_blank"
+            rel="noopener"
             ><i class="fab fa-facebook fa-lg"></i
           ></a>
-          <a class="col-3 text-center display-6" href="https://instagram.com/" target="_blank" rel="noopener"
+          <a
+            class="col-3 text-center display-6"
+            href="https://instagram.com/"
+            target="_blank"
+            rel="noopener"
             ><i class="fab fa-instagram fa-lg"></i
           ></a>
-          <a class="col-3 text-center display-6" href="https://x.com/" target="_blank" rel="noopener"
+          <a
+            class="col-3 text-center display-6"
+            href="https://x.com/"
+            target="_blank"
+            rel="noopener"
             ><i class="fab fa-twitter fa-lg"></i
           ></a>
-          <a class="col-3 text-center display-6" href="https://linkedin.com/" target="_blank" rel="noopener"
+          <a
+            class="col-3 text-center display-6"
+            href="https://linkedin.com/"
+            target="_blank"
+            rel="noopener"
             ><i class="fab fa-linkedin fa-lg"></i
           ></a>
         </div>
