--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!-- Footer -->
     <footer class="container justify-content-center">
       <div class="row justify-content-center">
-        <h4 class="col-4 text-center display-6 bg-color-secondary mt-3 p-4">
+        <h4 class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4">
           Come and Say Hi!
         </h4>
       </div>
@@ -168,7 +168,7 @@
         ></iframe>
       </div>
       <p class="p-4">
-        2 Whatcote Rd<br />
+        2 Whatcote Rd,<br />
         Oxhill,<br />
         England
       </p>
