Add Dog Cards and some Styling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       data-bs-theme="dark"
     >
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><h1 class="display-4">A Tail of Two Hearts</h1></a
         >
         <button
