--- a/our-dogs.html
+++ b/our-dogs.html
@@ -8,8 +8,8 @@
     <meta
       name="description"
       content="A Tail of Two Hearts is the dog adoption most trusted favourite to give you your happily ever after forever best friend"
-      >
-    <!-- Google Fonts -->  
+    />
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,12 +69,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Ours Stars</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="our-dogs.html"
+                >Ours Stars</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Get Involved</a>
@@ -86,6 +89,356 @@
         </div>
       </div>
     </nav>
+
+    <!-- Header -->
+
+    <header id="header" class="image-wrapper container">
+      <div id="hero" class="row justify-content-center">
+        <img
+          src="assets/images/hero-image.webp"
+          alt="dogs paw next to mans hand"
+          class="col-xl-7 p-0 mt-3"
+        />
+        <div class="col-xl-4 container">
+          <div id="spacer-top" class="row">
+            <h2 class="display-6 text-center bg-color-primary p-4 mt-3 col-12">
+              Introducing Our Pack...
+            </h2>
+          </div>
+          <div class="row"></div>
+          <p class="text-center col-12 mt-2 lead">
+            We're so excited to introduce you to our wonderful family of dogs!
+            Each one has their own story, personality, and charm — and we truly
+            believe there's a perfect match for everyone. Whether you're looking
+            for a playful pup, a gentle senior, or a loyal companion, we’re
+            confident your new best friend is waiting right here. We can't wait
+            for you to meet them and start your very own tail of two hearts.
+          </p>
+        </div>
+      </div>
+    </header>
+    <hr class="m-2 p-1" />
+
+    <!-- Newest Arrivals Seciton -->
+
+    <section id="newest-arrivals" class="container justify-content-center">
+      <div class="row">
+        <div class="col-12">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Newest Arrivals
+          </h3>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-1.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Tilly
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Small in size, big on sass. Loves belly rubs, garden zoomies,
+                  and judging your snack choices. Apply now—she’s watching.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-2.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Frankie
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Snorts, snores, and steals hearts. A professional couch potato
+                  with elite cuddling skills. Must love naps and be
+                  food-motivated.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-3.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Sunny
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Golden by name, golden by nature. Loyal, goofy, and always up
+                  for a game of fetch—or five. Bring snacks.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/new-arrival-4.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Rocco
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Wiggles like a worm, plays like a champ. Loves humans, hates
+                  boredom. Will box your heart into submission. Gloves optional.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-2 p-1" />
+
+    <!-- Our Small Dogs -->
+    <section id="smaller-dogs" class="container justify-content-center">
+      <div class="row">
+        <div class="col-12">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Our Smaller Dogs
+          </h3>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-1.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Biscuit
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Built like a loaf, runs like a rocket. Royal attitude, wiggly
+                  bum, and ears that hear snack bags from space.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-2.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Duchess
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Part runway model, part shadow. Loves brushing, drama, and
+                  being the star. Floofy, fabulous, and not afraid to bark
+                  orders.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-3.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Milo
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Low-maintenance coat, high-maintenance sass. Compact cuddle
+                  unit with speed, style, and opinions. Will accept treats as
+                  tribute for affection.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/smaller-dog-4.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Hamish
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Serious face, silly soul. Loves digging, sniffing, and
+                  stealing socks. Blonde by nature, bossy by choice. Terrier
+                  vibes, heart of gold.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-2 p-1" />
+
+    <!-- Larger Dogs -->
+    <section id="larger-dogs" class="container justify-content-center">
+      <div class="row">
+        <div class="col-12">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Larger Dogs
+          </h3>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-1.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Scooby
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Endless energy, chocolatey charm. Loves water, muddy paws, and
+                  making new best friends. Will trade kisses for biscuits—no
+                  questions asked.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-2.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Skye
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Smart, swift, and suspicious of squirrels. Herds
+                  everything—kids, cats, conversations. Needs love, space, and
+                  maybe a hobby. Outwits most humans.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-3.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Ziggy
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Bouncy, boxy, and built for fun. Wiggles like a noodle, snores
+                  like a bear. Will love you very enthusiastically.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xl-3">
+            <div class="card shadow m-auto my-3" style="width: 18rem">
+              <img
+                src="assets/images/bigger-dog-4.webp"
+                class="card-img-top"
+                alt="picture of a puppy"
+              />
+              <div class="card-header h4 bg-card-primary card-text-title">
+                Nala
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Sunshine in dog form. Loyal, licky, and always carrying
+                  something—usually a stick, sometimes your shoe. Just wants to
+                  love you.
+                </p>
+
+                <div class="text-end">
+                  <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-2 p-1" />
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
