--- a/our-dogs.html
+++ b/our-dogs.html
@@ -131,7 +131,7 @@
           </h3>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-1.webp"
@@ -153,7 +153,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-2.webp"
@@ -176,7 +176,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-3.webp"
@@ -198,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-4.webp"
