Bug fixing Card placements

--- a/our-dogs.html
+++ b/our-dogs.html
@@ -236,7 +236,7 @@
           </h3>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-1.webp"
@@ -258,7 +258,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-2.webp"
@@ -281,7 +281,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-3.webp"
@@ -304,7 +304,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-4.webp"
@@ -343,7 +343,7 @@
           </h3>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-1.webp"
@@ -366,7 +366,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-2.webp"
@@ -389,7 +389,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-3.webp"
@@ -411,7 +411,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xl-3">
+          <div class="col-md-6 col-xxl-3">
             <div class="card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-4.webp"
@@ -438,6 +438,70 @@
       </div>
     </section>
     <hr class="m-2 p-1" />
+
+    <!-- Footer -->
+    <footer class="container justify-content-center">
+      <div class="row justify-content-center">
+        <h4 class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4">
+          Come and Say Hi!
+        </h4>
+      </div>
+      <div class="row justify-content-center">
+        <p class="col-8 text-center p-4">
+          We’d love for you to come by, have a look around, and see it all for
+          yourself. Don’t be shy — stop in and say hi!
+        </p>
+      </div>
+      <div id="maps">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6528.009491748167!2d-1.5467365000330668!3d52.10891367708431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48772cbdd4f7f721%3A0x36ee47e81bd2c51d!2sOxhill%2C%20Warwick!5e1!3m2!1sen!2suk!4v1750707357195!5m2!1sen!2suk"
+          width="100%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+      <p class="p-4">
+        2 Whatcote Rd,<br />
+        Oxhill,<br />
+        England
+      </p>
+      <!-- Social Links -->
+      <div id="social-links">
+        <div class="social-links row justify-content-spaced pb-5">
+          <a
+            class="col-3 text-center display-6"
+            href="https://facebook.com/"
+            target="_blank"
+            rel="noopener"
+            ><i class="fab fa-facebook fa-lg"></i
+          ></a>
+          <a
+            class="col-3 text-center display-6"
+            href="https://instagram.com/"
+            target="_blank"
+            rel="noopener"
+            ><i class="fab fa-instagram fa-lg"></i
+          ></a>
+          <a
+            class="col-3 text-center display-6"
+            href="https://x.com/"
+            target="_blank"
+            rel="noopener"
+            ><i class="fab fa-twitter fa-lg"></i
+          ></a>
+          <a
+            class="col-3 text-center display-6"
+            href="https://linkedin.com/"
+            target="_blank"
+            rel="noopener"
+            ><i class="fab fa-linkedin fa-lg"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script
