Finish Dog Card Seciton

--- a/adoption-form.html
+++ b/adoption-form.html
@@ -8,8 +8,8 @@
     <meta
       name="description"
       content="A Tail of Two Hearts is the dog adoption most trusted favourite to give you your happily ever after forever best friend"
-      >
-    <!-- Google Fonts -->  
+    />
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -86,6 +86,34 @@
         </div>
       </div>
     </nav>
+    <!-- Header -->
+
+    <header id="header" class="image-wrapper container">
+      <div id="hero" class="row justify-content-center">
+        <img
+          src="assets/images/hero-image.webp"
+          alt="dogs paw next to mans hand"
+          class="col-xl-7 p-0 mt-3"
+        />
+        <div class="col-xl-4 container">
+          <div id="spacer-top" class="row">
+            <h2 class="display-6 text-center bg-color-primary p-4 mt-3 col-12">
+              Adoption has Never been Easier!
+            </h2>
+          </div>
+          <div class="row"></div>
+          <p class="text-center col-12 mt-2 lead">
+            Adopting a dog has never been easier. With simple online listings,
+            helpful staff, and a quick, caring process, finding your perfect
+            furry friend is just a few steps away. Whether you're a seasoned pet
+            owner or a first-timer, your new best friend could be waiting for
+            you today.
+          </p>
+        </div>
+      </div>
+    </header>
+    <hr class="m-2 p-1" />
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
