--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta
       name="description"
       content="A Tail of Two Hearts is the dog adoption most trusted favourite to give you your happily ever after forever best friend"
-      >
-    <!-- Google Fonts -->  
+    />
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -143,10 +143,172 @@
     </div>
     <hr class="m-2 p-1" />
 
+    <!-- Success Story Carousel -->
+
+    <section id="success-stories" class="container justify-content-center my-3">
+      <div class="row">
+        <div class="col-12">
+          <h3
+            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+          >
+            Success Stories!
+          </h3>
+          <!-- Carousel Start -->
+          <div id="carousel-success-stories" class="carousel slide my-3 shadow">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item position-relative active">
+                <img
+                  src="assets/images/success-story-1.webp"
+                  class="d-block w-100 max-height"
+                  alt="A happy woman with a golden retriever dog"
+                />
+                <div
+                  class="position-absolute bottom-0 start-50 translate-middle"
+                  style="z-index: 10"
+                >
+                  <div class="card">
+                    <div class="card-body">
+                      <figure>
+                        <blockquote class="blockquote">
+                          <p>
+                            "Adopting Bella was the best decision we’ve ever
+                            made — she fits right into our family. The process
+                            was so easy and transparent, we knew exactly what to
+                            expect at every step."
+                          </p>
+                        </blockquote>
+                        <figcaption class="blockquote-footer">
+                          Sue and Bella
+                          <cite title="Source Title"
+                            >First Time Dog Apoter</cite
+                          >
+                        </figcaption>
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item position-relative">
+                <img
+                  src="assets/images/success-story-2.webp"
+                  class="d-block w-100 max-height"
+                  alt="A happy woman with a golden retriever dog"
+                />
+                <div
+                  class="position-absolute bottom-0 start-50 translate-middle"
+                  style="z-index: 10"
+                >
+                  <div class="card">
+                    <div class="card-body">
+                      <figure>
+                        <blockquote class="blockquote">
+                          <p>
+                            "We couldn’t be happier with Max! Everything from
+                            the first inquiry to bringing him home was simple,
+                            clear, and totally stress-free."
+                          </p>
+                        </blockquote>
+                        <figcaption class="blockquote-footer">
+                          Meryl, Dean and Max
+                          <cite title="Source Title"
+                            >Long time dog lovers and adopters</cite
+                          >
+                        </figcaption>
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item position-relative">
+                <img
+                  src="assets/images/success-story-3.webp"
+                  class="d-block w-100 max-height"
+                  alt="A happy woman with a golden retriever dog"
+                />
+                <div
+                  class="position-absolute bottom-0 start-50 translate-middle"
+                  style="z-index: 10"
+                >
+                  <div class="card">
+                    <div class="card-body">
+                      <figure>
+                        <blockquote class="blockquote">
+                          <p>
+                            "Luna has brought so much joy into our lives. The
+                            adoption was incredibly straightforward — quick,
+                            honest, and handled with so much care."
+                          </p>
+                        </blockquote>
+                        <figcaption class="blockquote-footer">
+                          Kristie and Luna
+                          <cite title="Source Title"
+                            >First time dog adopter</cite
+                          >
+                        </figcaption>
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr class="m-2 p-1" />
+
     <!-- Footer -->
     <footer class="container justify-content-center">
       <div class="row justify-content-center">
-        <h4 class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4">
+        <h4
+          class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4"
+        >
           Come and Say Hi!
         </h4>
       </div>
