--- a/our-dogs.html
+++ b/our-dogs.html
@@ -132,7 +132,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-1.webp"
                 class="card-img-top"
@@ -146,6 +146,7 @@
                   Small in size, big on sass. Loves belly rubs, garden zoomies,
                   and judging your snack choices. Apply now—she’s watching.
                 </p>
+                <p><em>Age:</em> 6 weeks</p>
 
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
@@ -154,7 +155,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-2.webp"
                 class="card-img-top"
@@ -169,7 +170,7 @@
                   with elite cuddling skills. Must love naps and be
                   food-motivated.
                 </p>
-
+                <p><em>Age:</em> 8 weeks</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -177,7 +178,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-3.webp"
                 class="card-img-top"
@@ -191,7 +192,7 @@
                   Golden by name, golden by nature. Loyal, goofy, and always up
                   for a game of fetch—or five. Bring snacks.
                 </p>
-
+                <p><em>Age:</em> 6 weeks</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -199,7 +200,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/new-arrival-4.webp"
                 class="card-img-top"
@@ -213,7 +214,7 @@
                   Wiggles like a worm, plays like a champ. Loves humans, hates
                   boredom. Will box your heart into submission. Gloves optional.
                 </p>
-
+                <p><em>Age:</em> 5 weeks</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -237,7 +238,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-1.webp"
                 class="card-img-top"
@@ -251,7 +252,7 @@
                   Built like a loaf, runs like a rocket. Royal attitude, wiggly
                   bum, and ears that hear snack bags from space.
                 </p>
-
+                <p><em>Age:</em> 3 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -259,7 +260,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-2.webp"
                 class="card-img-top"
@@ -274,7 +275,7 @@
                   being the star. Floofy, fabulous, and not afraid to bark
                   orders.
                 </p>
-
+                <p><em>Age:</em> 7 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -282,7 +283,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-3.webp"
                 class="card-img-top"
@@ -297,7 +298,7 @@
                   unit with speed, style, and opinions. Will accept treats as
                   tribute for affection.
                 </p>
-
+                <p><em>Age:</em> 2 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -305,7 +306,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/smaller-dog-4.webp"
                 class="card-img-top"
@@ -320,7 +321,7 @@
                   stealing socks. Blonde by nature, bossy by choice. Terrier
                   vibes, heart of gold.
                 </p>
-
+                <p><em>Age:</em> 8 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -344,7 +345,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-1.webp"
                 class="card-img-top"
@@ -359,7 +360,7 @@
                   making new best friends. Will trade kisses for biscuits—no
                   questions asked.
                 </p>
-
+                <p><em>Age:</em> 6 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -367,7 +368,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-2.webp"
                 class="card-img-top"
@@ -382,7 +383,7 @@
                   everything—kids, cats, conversations. Needs love, space, and
                   maybe a hobby. Outwits most humans.
                 </p>
-
+                <p><em>Age:</em> 4 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -390,7 +391,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-3.webp"
                 class="card-img-top"
@@ -404,7 +405,7 @@
                   Bouncy, boxy, and built for fun. Wiggles like a noodle, snores
                   like a bear. Will love you very enthusiastically.
                 </p>
-
+                <p><em>Age:</em> 5 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -412,7 +413,7 @@
             </div>
           </div>
           <div class="col-md-6 col-xxl-3">
-            <div class="card shadow m-auto my-3" style="width: 18rem">
+            <div class="card dog-card shadow m-auto my-3" style="width: 18rem">
               <img
                 src="assets/images/bigger-dog-4.webp"
                 class="card-img-top"
@@ -427,7 +428,7 @@
                   something—usually a stick, sometimes your shoe. Just wants to
                   love you.
                 </p>
-
+                <p><em>Age:</em> 8 years old</p>
                 <div class="text-end">
                   <a href="#" class="btn custom-button-filled">Adopt Me Now!</a>
                 </div>
@@ -442,7 +443,9 @@
     <!-- Footer -->
     <footer class="container justify-content-center">
       <div class="row justify-content-center">
-        <h4 class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4">
+        <h4
+          class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4"
+        >
           Come and Say Hi!
         </h4>
       </div>
