Add Table and Add Footer to other Pages

--- a/index.html
+++ b/index.html
@@ -314,10 +314,30 @@
           </h4>
         </div>
         <div class="row justify-content-center">
-          <p class="col-8 text-center p-4">
+          <p class="col-xl-6 text-center p-4">
             We’d love for you to come by, have a look around, and see it all for
             yourself. Don’t be shy — stop in and say hi!
           </p>
+          <div class="col-xl-5">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col"></th>
+                <th scope="col">Mon-Fri</th>
+                <th scope="col">Saturday</th>
+                <th scope="col">Sunday</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Opening Times</th>
+                <td>9am-5pm</td>
+                <td>8am-8pm</td>
+                <td>CLOSED</td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
         </div>
         <div id="location" class="row">
           <iframe
