--- a/adoption-form.html
+++ b/adoption-form.html
@@ -114,6 +114,117 @@
     </header>
     <hr class="m-2 p-1" />
 
+    <!-- Footer -->
+    <footer class="container-fluid">
+      <div class="container justify-content-center">
+        <div class="row justify-content-center">
+          <h4
+            class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4"
+          >
+            Come and Say Hi!
+          </h4>
+        </div>
+        <div class="row justify-content-center">
+          <p class="col-xl-6 text-center p-4">
+            We’d love for you to come by, have a look around, and see it all for
+            yourself. Don’t be shy — stop in and say hi!
+          </p>
+          <div class="col-xl-5">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col"></th>
+                <th scope="col">Mon-Fri</th>
+                <th scope="col">Saturday</th>
+                <th scope="col">Sunday</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Opening Times</th>
+                <td>9am-5pm</td>
+                <td>8am-8pm</td>
+                <td>CLOSED</td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
+        </div>
+        <div id="location" class="row">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6528.009491748167!2d-1.5467365000330668!3d52.10891367708431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48772cbdd4f7f721%3A0x36ee47e81bd2c51d!2sOxhill%2C%20Warwick!5e1!3m2!1sen!2suk!4v1750707357195!5m2!1sen!2suk"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            class="col-xl-9"
+          ></iframe>
+          <div class="col-xl-3">
+            <div class="row p-3">
+              <div class="col-6 col-xl-12">
+                <p>
+                  Address: <br />
+                  2 Whatcote Rd<br />
+                  Oxhill<br />
+                  Warwick <br />
+                  CV 35 0RA <br />
+                  England UK
+                </p>
+              </div>
+              <div class="col-6 col-xl-12">
+                <div class="row">
+                  <p class="col-12">
+                    Telephone Number: <br />
+                    0314 159 2654
+                  </p>
+                  <p class="col-12">
+                    Email Address: <br />
+                    tailoftwohearts@gmail.com
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Social Links -->
+        <div id="social-links">
+          <div class="social-links row justify-content-around">
+            <a
+              class="col-1 text-center h3"
+              href="https://facebook.com/"
+              target="_blank"
+              rel="noopener"
+              ><i class="fab fa-facebook fa-lg"></i
+            ></a>
+            <a
+              class="col-1 text-center h3"
+              href="https://instagram.com/"
+              target="_blank"
+              rel="noopener"
+              ><i class="fab fa-instagram fa-lg"></i
+            ></a>
+            <a
+              class="col-1 text-center h3"
+              href="https://x.com/"
+              target="_blank"
+              rel="noopener"
+              ><i class="fab fa-twitter fa-lg"></i
+            ></a>
+            <a
+              class="col-1 text-center h3"
+              href="https://linkedin.com/"
+              target="_blank"
+              rel="noopener"
+              ><i class="fab fa-linkedin fa-lg"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
