--- a/our-dogs.html
+++ b/our-dogs.html
@@ -52,7 +52,7 @@
       data-bs-theme="dark"
     >
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><h1 class="display-4">A Tail of Two Hearts</h1></a
         >
         <button
@@ -80,10 +80,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Get Involved</a>
+              <a class="nav-link" href="get-involved.html">Get Involved</a>
             </li>
             <li class="nav-item">
-              <a class="btn custom-button-filled" href="#">Adopt Now!</a>
+              <a class="btn custom-button-filled" href="adoption-form.html">Adopt Now!</a>
             </li>
           </ul>
         </div>
