--- a/get-involved.html
+++ b/get-involved.html
@@ -52,7 +52,7 @@
       data-bs-theme="dark"
     >
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><h1 class="display-4">A Tail of Two Hearts</h1></a
         >
         <button
@@ -69,18 +69,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link"  href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Ours Stars</a>
+              <a class="nav-link" href="our-dogs.html">Ours Stars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Get Involved</a>
+              <a class="nav-link active" aria-current="page" href="get-involved.html">Get Involved</a>
             </li>
             <li class="nav-item">
-              <a class="btn custom-button-filled" href="#">Adopt Now!</a>
+              <a class="btn custom-button-filled" href="adoption-form.html">Adopt Now!</a>
             </li>
           </ul>
         </div>
