Add Success Page and add Form Elements

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Ours Stars</a>
+              <a class="nav-link" href="our-dogs.html">Ours Stars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Get Involved</a>
+              <a class="nav-link" href="get-involved.html">Get Involved</a>
             </li>
             <li class="nav-item">
-              <a class="btn custom-button-filled" href="#">Adopt Now!</a>
+              <a class="btn custom-button-filled" href="adoption-form.html">Adopt Now!</a>
             </li>
           </ul>
         </div>
